--- a/.github/workflows/deployIaC.yaml
+++ b/.github/workflows/deployIaC.yaml
@@ -1,6 +1,6 @@
 
 # This is a basic workflow to help you get started with Actions
-name: DeployRunnerAKS
+name: IaC Deployment
 env:
   RESOURCE_GROUP: 'aksrunners-rg'
   CLUSTER_NAME: 'aksrunners-aks'
